refactor: add new rule in stylelint

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "stylelint-config-recess-order"
 ],
   "rules": {
+    "declaration-no-important": true,
     "color-hex-length": "long"
   }
 }
